# RF_RequestsLibrary

./: .gitignore  README.md  base.resource  pyproject.toml
resource/: session.resource
resource/routes/: get_jsonplaceholder.resource  post_jsonplaceholder.resource
resource/routes/json/: post_jsonplaceholder.py
test/: __init__.robot  jsonplaceholder.robot
